# ShellHacks_1

./:  pipeline_config.yaml  .coverage  .dockerignore  .env  .gitignore  LICENSE  README.md  README_DB.md  README_ETL.md  README_FRONTEND.md  agents.py  agents_archive.py  azure-pipelines.yml  bigquery_config.py  bigquery_config.py.rej  config.py  data_models.py  docker-compose.dev.yml  docker-compose.yml  dockerfile  dspy_signatures.py  fix.py  fraud_loop.py  key.json  llm.py  main_archive.py  minimal_backend.py  nextstep.txt  package-lock.json  package.json  pyproject.toml  pytest.ini  quick-start.bat  quick_start.sh  requirements.txt  server.js  setup_pipeline.sh  start-all.out  start_mcp.sh  startup.sh  (+10 more)
.claude/: settings.local.json
backend/: Dockerfile  __init__.py  agent_definitions.py  agents.py  compat.py  compat_cleanup.md  data_models.py  dspy_manager.py  dspy_signatures.py  error_validation.py  fraud_loop.py  hardcoded_tools.py  invoice_processor.py  llm.py  main.py  main_detector.py  main_docker.py  main_pipeline.py  main_simple.py  parallel_llm_agents.py  requirements.txt
bq/: sample_invoices.ndjson  schema_invoices.json
data/: bigquery_fraud_samples.json  bigquery_llm_fraud_analysis.json  comprehensive_gemini_analysis.json  final_gemini_comparison.json  fraud_analysis_10k_samples.json  gcp_fraud_training_data.json  invoice_training_data.json  llm_accuracy_assessment.json  llm_fraud_analysis_results.json  maximum_scale_analysis_results.json  multi_gemini_fraud_comparison.json  multi_llm_fraud_comparison.json  scaled_fraud_analysis_10k.json  working_gemini_comparison.json
data_pipeline/: __init__.py
docs/: README_BQ.md
examples/: run_optuna_study.py  team_usage.py  train_on_bq.py  train_transaction_model.py
frontend/: .dockerignore  .gitignore  App.js  Dockerfile  Dockerfile.dev  Dockerfile.nodejs  Dockerfile.optimized  Dockerfile.production  nginx.conf  package-lock.json  package-server.json  package.json  server.js  tailwind.config.js  vercel.json  web.config
scripts/: build_invoice_training_table.py  check_google_keys.py  create_sample_data.py  dspy_integration_test.py  export_sample_invoices.py  inspect_data.py  run_feature_pipeline_test.py  run_unit_tests_quick.py  smoke_bq.py  start-all.sh
shellhacks/: mcp_client.py  mcp_config.json
tests/: ci_conftest.py  conftest.py  run_tests.sh  test_api_invoices.py  test_end_to_end.py  test_etl_sql.py  test_performance.py
tools/: PROFESSIONAL_DASHBOARD_GUIDE.md  README.md  alternative_llm_analyzer.py  alternative_llm_results.json  bigquery_explorer.py  bigquery_fraud_analyzer.py  bigquery_fraud_analyzer_fixed.py  check_models.py  claude_model_tester.py  comprehensive_gemini_analyzer.py  comprehensive_ollama_analysis.json  comprehensive_ollama_analyzer.py  (+35 more)
(+129 files in other folders)
